# manifold_reconstructor_IROS15

./: CMakeLists.txt  README.md
include/manifoldReconstructor/: CamParser.h  Delaunay3DCellInfo.h  Delaunay3DVertexInfo.h  Logger.h  ManifoldManager.h  ManifoldMeshReconstructor.h  OpenMvgParser.h  OutputCreator.h  PointsParserFromOut.h  SfMData.h  conversionUtilities.hpp  drawingUtilities.hpp  types_config.hpp  types_mesh_sweeping.hpp  types_reconstructor.hpp  utilities.hpp
src/: Delaunay3DCellInfo.cpp  Delaunay3DVertexInfo.cpp  ManifoldManager.cpp  ManifoldMeshReconstructor.cpp  OutputCreator.cpp
src/cam_parsers/: CamParser.cpp  OpenMvgParser.cpp  PointsParserFromOut.cpp
src/utilities/: Logger.cpp  conversionUtilities.cpp  utilities.cpp
test/: CMakeLists.txt
test/include/: EdgePointConfigurator.h  EdgePointSpaceCarver.h  KittiCamParser.h  KittiRectifiedCamParser.h  ManifoldReconstructorConfigurator.h  Parser.h  PathCreator.h  ReconstructFromSfMData.h  ReconstructorFromOut.h  Track.h  VideoSimulator.h
test/src/: EdgePointSpaceCarver.cpp  Main.cpp  PathCreator.cpp  ReconstructFromSfMData.cpp  ReconstructorFromOut.cpp  VideoSimulator.cpp
